--- a/practica-cliente/css/estilos.css
+++ b/practica-cliente/css/estilos.css
@@ -35,3 +35,12 @@
         height: 100px; 
         overflow-y: scroll; 
     }
+
+    #spinner {
+        position: fixed; 
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+
+    }
