--- a/club-navegacion/View/css/estilos.css
+++ b/club-navegacion/View/css/estilos.css
@@ -38,3 +38,21 @@ video {
   .hand-cursor {
     cursor: pointer;
 }
+
+
+
+/* Estilo personalizado para el carrusel */
+    .owl-carousel .owl-item img {
+      max-width: 200px; /* Establece el ancho máximo de la imagen */
+      max-height: 200px; /* Establece la altura máxima de la imagen */
+    }
+
+  
+    /*
+    estilo para la tabla de cursos
+*/
+    #listadocursos tbody tr:hover {
+      background-color: blue;
+      cursor: pointer;
+    }
+    
